--- a/src/main/recipes/Recipes.css
+++ b/src/main/recipes/Recipes.css
@@ -1,3 +1,11 @@
 ul {
     list-style: none;
 }
+
+.recipes {
+    padding: 25px;
+    background: #a9adac;
+    border: #1f1f1f;
+    border-radius: 1rem;
+}
+
