--- a/src/main/AddRecipeForm.css
+++ b/src/main/AddRecipeForm.css
@@ -1,8 +1,8 @@
 .addRecipeForm {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     padding: 20px;
+    grid-column: 1 / span 1;
 }
 
 .addRecipeForm form {
