--- a/src/main/Main.css
+++ b/src/main/Main.css
@@ -1,6 +1,6 @@
 .main{
     width: 100%;
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: 1fr 3fr;
     padding: 25px 10px; 
 }
