--- a/src/main/recipes/RecipeListItem.css
+++ b/src/main/recipes/RecipeListItem.css
@@ -1,5 +1,8 @@
 .recipeListItem {
     padding: 20px 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin-bottom: 20px;
     border-radius: .5rem;
     border: 1px solid #a9adac;
@@ -10,7 +13,8 @@
 .ingredients {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;    
+    flex-wrap: wrap;  
+    max-width: 75%;  
 }
 
 .recipeListItem h2 {
