--- a/src/main/AddRecipeForm.css
+++ b/src/main/AddRecipeForm.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     padding: 20px;
     grid-column: 1 / span 1;
+    border: 1px solid #a9adac;
+    
 }
 
 .addRecipeForm form {
